[package]
name = "scf-core"
version = "1.2.0"
authors = ["Qiang Zhao <koqizhao@outlook.com>"]
edition = "2018"
description = "Simple Configuration Facade"
license = "Apache-2.0"
homepage = "https://github.com/mydotey/scf/tree/master/rust"
repository = "https://github.com/mydotey/scf"
readme = "README.md"
keywords = ["config", "configuration", "config-manager", "setting", "property"]
categories = ["config"]

[dependencies]
lang_extension = "1.0.1"
log = "0.4.8"

[dev-dependencies]
log4rs = "0.8.3"
