[package]
name = "scf-core"
version = "1.4.1"
authors = ["Qiang Zhao <koqizhao@outlook.com>"]
edition = "2024"
description = "Simple Configuration Facade"
license = "Apache-2.0"
homepage = "https://github.com/mydotey/scf/tree/master/rust"
repository = "https://github.com/mydotey/scf"
readme = "README.md"
keywords = ["config", "configuration", "config-manager", "setting", "property"]
categories = ["config"]

[dependencies]
lang_extension = "1.2.0"
log = "0.4.27"

[dev-dependencies]
log4rs = "1.3.0"
